# cluster-matrix42

./: .gitignore  Cargo.toml
.github/workflows/: minimal-ci.yml
applications/cluster-matrix/: Cargo.toml
applications/cluster-matrix-app/: Cargo.toml
applications/cluster-matrix-app/src/: main.rs
applications/cluster-matrix/src/: lib.rs
applications/simulator/: Cargo.toml  build.rs
applications/simulator/assets/: layout.json
applications/simulator/examples/: plugin_sim.rs
applications/simulator/src/: lib.rs  main.rs  native_plugin.rs  plugin_host.rs
cluster-core/: Cargo.toml
cluster-core-macros/: Cargo.toml
cluster-core/src/: builders.rs  constants.rs  lib.rs  models.rs  parsing.rs  types.rs  utils.rs  visualization.rs
cluster-core/src/visualization/: cluster.rs  display.rs  renderer.rs
cluster-logic/cluster-core/: Cargo.toml
cluster-logic/cluster-core/src/: constants.rs  models.rs  types.rs  utils.rs  visualization.rs
cluster-logic/cluster-core/src/visualization/: renderer.rs
cluster-logic/cluster-macros/: Cargo.toml
cluster-logic/cluster-macros/src/: lib.rs
cluster-logic/cluster-net/: Cargo.toml  README.md
cluster-logic/cluster-net/src/: client.rs  endpoints.rs  error.rs  lib.rs  tls.rs
common/: Cargo.toml
common/src/: animations.rs  constants.rs  lib.rs  shared.rs
common/src/animations/: arrow.rs  fortytwo.rs  quadrant.rs  stars.rs
common/src/shared/: types.rs
common/src/utilities/: color.rs
common/src/visualization/: display.rs  layouts.rs  renderer.rs  seats.rs
drivers/hub75-driver/src/: lib.rs
drivers/hub75-rp2350-driver/: Cargo.toml
drivers/hub75-rp2350-driver/src/: config.rs  dma.rs  lib.rs  lut.rs  memory.rs  pio.rs
embd-tests/: Cargo.toml
embd-tests/.cargo/: config.toml
graphics-common/: Cargo.toml
graphics-common/src/: animations.rs  lib.rs
graphics-common/src/animations/: arrow.rs  fortytwo.rs  quadrant.rs  stars.rs
graphics-common/src/utilities/: color.rs
hardware-tests/basic-panel/: Cargo.toml
hardware-tests/basic-panel/src/: helpers.rs  lib.rs
hardware-tests/eth-test/: Cargo.toml  README.md  rust-toolchain.toml
hardware-tests/eth-test/.cargo/: config.toml
hardware-tests/eth-test/src/: compat.rs  main.rs
hub-75-driver/: Cargo.toml
hub-75-driver/src/: lib.rs
hub75-driver/: Cargo.toml
hub75-driver/src/: lib.rs
hub75-rp2350-driver/: Cargo.toml
hub75-rp2350-driver/src/: config.rs  dma.rs  lib.rs  memory.rs  pins.rs  pio.rs
plugins/: README.md
plugins/plugin-api/: Cargo.toml  build.rs  cbindgen.toml
plugins/plugin-api/src/: lib.rs
plugins/plugin-examples-c/: plasma.c  quadrant.c
plugins/plugin-examples-c/common/: plugin.ld  plugin_api.h  plugin_helpers.h
plugins/plugin-examples-rust/: Cargo.toml
plugins/plugin-examples-rust/bouncing_ball/: Cargo.toml
plugins/plugin-examples-rust/bouncing_ball/src/: lib.rs  main.rs
plugins/plugin-examples-rust/quadrant_rust/: Cargo.toml
plugins/plugin-examples-rust/quadrant_rust/src/: lib.rs  main.rs
plugins/plugin-host/: Cargo.toml  build.rs
plugins/plugin-host/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: main.rs
