[workspace]
resolver = "3"
members = [ "common",
    "embd-tests",
#    "hub75-driver",
    "hub75-rp2350-driver",
    "simulator"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = 2

[profile.dev]
lto = true

[workspace.dependencies]
# Local dependencies
#hub75-driver = { path = "hub75-driver" }
hub75-rp2350-driver = { path = "hub75-rp2350-driver" }

# Embedded dependencies
embedded-graphics-core = "0.4"
embedded-graphics = "0.8.0"

# Logging dependencies
defmt = { version = "1.0" }
defmt-rtt = { version = "1.0" }
panic-probe = { version = "1.0" }

# Embassy dependencies
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7" }
embassy-executor = { version = "0.7", git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { version = "0.4", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.4.0" }

# Misc dependencies
static_cell = "2.1"
heapless = "0.8.0"
libm = "0.2.15"
