[workspace]
resolver = "3"
members = [
    "graphics-common",
    "cluster-logic/*",
    "applications/cluster-matrix-app",
    "applications/simulator",
    "drivers/hub75-rp2350-driver",
    # "drivers/hub75-driver",  #disabled
    "hardware-tests/basic-panel",
    "hardware-tests/eth-test",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2

[profile.dev]
lto = true

[workspace.dependencies]
# Local dependencies
graphics-common = { path = "graphics-common" }
cluster-core = { path = "cluster-logic/cluster-core" }
cluster-macros = { path = "cluster-logic/cluster-macros" }
cluster-net = { path = "cluster-logic/cluster-net" }
#hub75-driver = { path = "hub75-driver" } not using it anymore
hub75-rp2350-driver = { path = "drivers/hub75-rp2350-driver" }

# Embedded dependencies
embedded-graphics-core = "0.4"
embedded-graphics = "0.8.1"

# Logging dependencies
defmt = { version = "1.0" }
defmt-rtt = { version = "1.0" }
panic-probe = { version = "1.0" }

# Embassy dependencies
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }

# Misc dependencies
static_cell = "2.1"
heapless = "0.8.0"
libm = "0.2.15"
