[package]
name = "cluster-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "serde/std"]
std = []

[dependencies]
embedded-graphics = { workspace = true }
heapless = { workspace = true, features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"