[package]
name = "hub75-rp2350-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics-core = { workspace = true}
embedded-hal = { workspace = true }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info", "intrinsics"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
