[package]
name = "hub75-rp2350-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics-core = { workspace = true}
embedded-hal = { workspace = true }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
fixed-macro = "1.2.0"

[features]
default = ["mapping-brg"]
mapping-brg = []  # Blue→Red, Red→Green, Green→Blue
mapping-gbr = []  # Green→Red, Blue→Green, Red→Blue
mapping-bgr = []  # Blue→Red, Green→Green, Red→Blue
mapping-rbg = []  # Red→Red, Blue→Green, Green→Blue
mapping-grb = []  # Green→Red, Red→Green, Blue→Blue