[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use the embedded-graphics simulator
embedded-graphics-simulator = "0.8.0"
embedded-graphics = { workspace = true }

# Shared animation logic
cluster-core = { workspace = true, features = ["std"] }
graphics-common = { workspace = true }

# Plugin system (optional)
plugin-api = { path = "../../plugins/plugin-api", features = ["std"], optional = true }
libloading = { version = "0.9.0", optional = true }

[features]
default = []
plugin = ["dep:plugin-api", "dep:libloading"]

[[example]]
name = "plugin_sim"
required-features = ["plugin"]
