[package]
name = "cluster-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cluster-core = { workspace = true, features = ["std"] }