[package]
name = "hub75-rp2350-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics-core = { workspace = true }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
fixed-macro = "1.2.0"
defmt = { workspace = true }

[features]
size_128x128 = []
size_64x64 = []
size_64x32 = []
color_rgb = []
color_gbr = []
waveshare_64x32 = ["size_64x32", "color_rgb"]
gbr_128x128 = ["size_128x128", "color_gbr"]
gbr_64x64 = ["size_64x64", "color_gbr"]