[workspace]
members = ["quadrant_rust", "bouncing_ball"]
resolver = "2"

[profile.release]
opt-level = "z"            # Optimize for size
lto = true                 # Enable Link Time Optimization
codegen-units = 1          # Better optimization
panic = "abort"            # No unwinding support
strip = true               # Strip symbols
