[package]
name = "quadrant_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "quadrant_rust"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "quadrant_rust"
path = "src/main.rs"

[dependencies]
plugin-api = { path = "../../plugin-api" }

[features]
default = []
simulator = ["plugin-api/std"]
